tests/reject/params_same_name.ul
void foo(int x, float x) {}

void main() {}